# riff

./: .gitignore  .pre-commit-config.yaml  .yamllint  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
defaults/: PLANNER.md  REVIEWER.md  WORKER.md
src/riff/: __init__.py  cli.py  config.py  forge.py  prompts.py  runner.py  session.py
tests/: test_riff.py
