[project]
name = "riff"
version = "0.1.0"
description = "Rapid Iterative Feedback Flow or riff is for fuckery — automated claude agent review loop"
readme = "README.md"
authors = [
    { name = "Anton Eriksson", email = "anton.emanuel@icloud.com" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0",
]

[project.scripts]
riff = "riff.cli:app"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[project.optional-dependencies]
dev = ["pytest>=8.0", "ty", "ruff>=0.6"]

[tool.ruff]
target-version = "py311"
